Fixing vertical alignment of logo.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
     border-bottom: 3px solid #000;
     display: flex;
     justify-content: space-between;
-    align-items: top;
+    align-items: flex-start;
     width: 100%;
     padding: 1rem 0;
   }
